# code

C#/Homework/: Homework.sln  Program.cs
C#/hello/: Program.cs  hello.sln  homework.cs  play.md
C++/CoffeeMaker/: CoffeeAndTeaMaker.cpp  CoffeeAndTeaMaker.hpp  CoffeeMaker.cpp  CoffeeMaker.hpp  test_CoffeeMaker  test_CoffeeMaker.cpp
C++/Date/: 1234  Date.cpp  Date.hpp  test_Date  test_Date.cpp
C++/Inheritance/: Inheritance.cpp  Inheritance.hpp  test_Inheritance  test_Inheritance.cpp
C++/play/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
C++/play/src/: 123  test.cpp
C++/play1/: 1234  Time.cpp  Time.hpp  main.cpp
C++/play2/: 123  1234  test.cpp  test.h
C++/test/: test_Face.cpp  test_Line.cpp  test_Model.cpp
C++/test2/: CMakeCache.txt  Makefile  cmake_install.cmake
C++/test2/src/: main.cpp
Docker/: Dockerfile
Python/程序文件/DL/: play.py
Python/程序文件/Play/: 16.广搜.py  Link.py  Untitled-1.py  (+21 more)
fall_2020/: requirements.txt
fall_2020/hw0_release/: README.md  hw0.ipynb  imageManip.py  linalg.py
fall_2020/hw1_release/: filters.py  hw1.ipynb
fall_2020/hw2_release/: edge.py  hw2.ipynb
fall_2020/hw3_release/: hw3.ipynb  panorama.py
fall_2020/hw4_release/: segmentation.py
fall_2020/hw5_release/: hw5.ipynb  seam_carving.py
fall_2020/hw6_release/: detection.py  hw6.ipynb  hw6_updated.ipynb  utils.py  visualization.py
fall_2020/hw7_release/: hw7.ipynb  motion.py  utils.py
fall_2020/hw8_release/: cameras.py  hw8.ipynb  utils.py
test0/: db.sqlite3
test0/app_name/: models.py
test0/test0/: asgi.py  settings.py  urls.py  wsgi.py
(+42 files in other folders)
